8339307: jhsdb jstack could not trace FFM upcall frame